// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppFooter has the expected html structure if connected 1`] = `
"<footer class=\\"app-footer\\">
   <div class=\\"app-footer-container\\">
      <div class=\\"afi afi-success\\">
         <i class=\\"material-icons success\\">done</i><span>gaia-1 (#4555)</span>
      </div>
   <div class=\\"afi\\">
      <i class=\\"material-icons\\">settings_ethernet</i><span>192.169.9.5</span>
   </div>
</div>
</footer>"
`;

exports[`AppFooter has the expected html structure if not connected 1`] = `
"<footer class=\\"app-footer\\">
   <div class=\\"app-footer-container\\">
      <div class=\\"afi\\">
         <i class=\\"material-icons fa-spin\\">rotate_right</i><span class=\\"afi-connecting\\">Connecting…</span>
      </div>
</div>
</footer>"
`;
